--- a/Jellyfin/Views/ServerSelection.xaml
+++ b/Jellyfin/Views/ServerSelection.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Jellyfin.Views.OnBoarding"
+    x:Class="Jellyfin.Views.ServerSelection"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Jellyfin.Views"
