--- a/Jellyfin/Views/Home.xaml
+++ b/Jellyfin/Views/Home.xaml
@@ -35,6 +35,12 @@
                     FontFamily="{StaticResource JellyfinFamilyFont}"
                     Margin="0 0 0 28"
                     HorizontalAlignment="Center" />
+                <Button 
+                    x:Name="LogOut"
+                    Style="{StaticResource PrimaryButton}"
+                    Content="Log Out (testing)"
+                    Margin="0 8 0 8"
+                    Click="LogOut_Click" />
             </StackPanel>
         </Grid>
     </Grid>
