--- a/Jellyfin/Views/ServerSelection.xaml
+++ b/Jellyfin/Views/ServerSelection.xaml
@@ -9,56 +9,40 @@
     mc:Ignorable="d">
 
     <Grid Background="{StaticResource Color0}">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState>
-                    <VisualState.StateTriggers>
-                        <c:DeviceFamilyStateTrigger TargetDeviceFamily="Desktop" />
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="RowHeader.Height" Value="60" />
-                        <Setter Target="logo.HorizontalAlignment" Value="Left" />
-                        <Setter Target="logo.Height" Value="28" />
-                        <Setter Target="logo.Margin" Value="28 0 0 0" />
-                        <Setter Target="txtTitle.FontSize" Value="22" />
-                        <Setter Target="pnlMain.MaxWidth" Value="400" />
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
         <Grid.RowDefinitions>
-            <RowDefinition x:Name="RowHeader" Height="200" />
+            <RowDefinition Height="60" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
         <Grid Background="{StaticResource Color10}">
             <Image 
-                x:Name="logo" 
                 Source="/Assets/OnBoardingLogo.png" 
                 Stretch="Uniform" 
-                HorizontalAlignment="Center" 
-                Height="80" />
+                HorizontalAlignment="Left" 
+                Height="28"
+                Margin="28 0 0 0" />
         </Grid>
 
         <Grid Grid.Row="1" Padding="0 40 0 0">
             <StackPanel 
-                x:Name="pnlMain" 
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Top" 
                 Width="640">
                 <TextBlock
-                    x:Name="txtTitle"
                     Text="Connect to Jellyfin Server" 
-                    Foreground="White" FontSize="{StaticResource FontL}"
-                    Margin="0 0 0 28" FontFamily="{StaticResource JellyfinFamilyFont}"
+                    Foreground="White"
+                    FontSize="{StaticResource FontL}"
+                    FontFamily="{StaticResource JellyfinFamilyFont}"
+                    Margin="0 0 0 28"
                     HorizontalAlignment="Center" />
                 <TextBox 
-                    x:Name="txtUrl" 
+                    x:Name="ServerUrlText" 
                     Style="{StaticResource PrimaryTextBox}" 
                     Margin="0 8 0 8"
-                    PlaceholderText="ex: 192.168.1.100:8096 or demo.jellyfin.org"/>
+                    PlaceholderText="ex: 192.168.1.100:8096 or demo.jellyfin.org"
+                    KeyUp="ServerUrlText_KeyUp" />
                 <TextBlock 
-                    x:Name="txtError"
+                    x:Name="ErrorText"
                     FontFamily="{StaticResource JellyfinFamilyFont}"
                     Text="We're unable to connect to the selected server right now. Please ensure it is running and try again" 
                     HorizontalAlignment="Center"
@@ -69,9 +53,10 @@
                     Margin="1 1 1 20"
                     Foreground="#CF4A4A" />
                 <Button 
-                    x:Name="btnConnect"
+                    x:Name="ConnectButton"
                     Style="{StaticResource PrimaryButton}"
-                    Content="Connect"  />
+                    Content="Connect"
+                    Click="ConnectButton_Click" />
             </StackPanel>
         </Grid>
         
