--- a/Jellyfin/Views/ServerSelection.xaml
+++ b/Jellyfin/Views/ServerSelection.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Jellyfin.Views"
-    xmlns:c="using:Jellyfin.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -35,28 +34,27 @@
                     FontFamily="{StaticResource JellyfinFamilyFont}"
                     Margin="0 0 0 28"
                     HorizontalAlignment="Center" />
-                <TextBox 
-                    x:Name="ServerUrlText" 
-                    Style="{StaticResource PrimaryTextBox}" 
-                    Margin="0 8 0 8"
+                <TextBox
                     PlaceholderText="ex: 192.168.1.100:8096 or demo.jellyfin.org"
-                    KeyUp="ServerUrlText_KeyUp" />
+                    Text="{x:Bind ViewModel.ServerUrl, Mode=TwoWay}"
+                    IsEnabled="{x:Bind ViewModel.IsInteractable, Mode=OneWay}"
+                    Style="{StaticResource PrimaryTextBox}" 
+                    Margin="0 8 0 8" />
                 <TextBlock 
-                    x:Name="ErrorText"
+                    Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
+                    Visibility="{x:Bind ViewModel.ShowErrorMessage, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
                     FontFamily="{StaticResource JellyfinFamilyFont}"
-                    Text="We're unable to connect to the selected server right now. Please ensure it is running and try again" 
                     HorizontalAlignment="Center"
                     TextAlignment="Center"
                     TextWrapping="Wrap"
-                    Visibility="Collapsed"
                     FontSize="{StaticResource FontM}"
                     Margin="1 1 1 20"
                     Foreground="#CF4A4A" />
                 <Button 
-                    x:Name="ConnectButton"
-                    Style="{StaticResource PrimaryButton}"
                     Content="Connect"
-                    Click="ConnectButton_Click" />
+                    Click="{x:Bind ViewModel.Connect}"
+                    IsEnabled="{x:Bind ViewModel.IsInteractable, Mode=OneWay}"
+                    Style="{StaticResource PrimaryButton}" />
             </StackPanel>
         </Grid>
         
