--- a/Jellyfin/Resources/JellyfinStyleResources.xaml
+++ b/Jellyfin/Resources/JellyfinStyleResources.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Jellyfin">
+    xmlns:common="using:Jellyfin.Common">
 
     <!-- This converter enables Visibility property values to bind to Boolean properties. 
         By default, a value of true is converted to a value of Visibility.Visible.
         A binding can also set ConverterParameter=Reverse in order to reverse this effect.
         This is particularly useful when you want to swap the visibility of two elements 
         depending on a single boolean property value. -->
-    <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
     <SolidColorBrush x:Key="Color0" Color="#101010" />
     <SolidColorBrush x:Key="Color10" Color="#202020" />
