--- a/Jellyfin/Views/Home.xaml
+++ b/Jellyfin/Views/Home.xaml
@@ -2,6 +2,8 @@
     x:Class="Jellyfin.Views.Home"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:Behaviors="using:Jellyfin.Behaviors"
     xmlns:local="using:Jellyfin.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -41,17 +43,19 @@
                 <ListView
                     ItemsSource="{x:Bind ViewModel.UserViews}"
                     SelectionMode="None">
-                    <ListView.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal" />
-                        </ItemsPanelTemplate>
+                  <Interactivity:Interaction.Behaviors>
+                    <Behaviors:FocusFirstItemOnLoadBehavior />
+                  </Interactivity:Interaction.Behaviors>
+                  <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
                     </ListView.ItemsPanel>
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="local:UserView">
                             <Button
                                 Background="Transparent"
-                                Click="{x:Bind Select}"
-                                IsTabStop="True">
+                                Click="{x:Bind Select}">
                                 <Button.Content>
                                     <StackPanel>
                                         <Image Width="300">
