--- a/Jellyfin/Views/ItemDetails.xaml
+++ b/Jellyfin/Views/ItemDetails.xaml
@@ -3,6 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Jellyfin.Views"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:Behaviors="using:Jellyfin.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -56,12 +58,16 @@
                                 </ListView.ItemTemplate>
                             </ListView>
                         </StackPanel>
-                        <Button 
+                        <Button
                             Style="{StaticResource PrimaryButton}"
                             Content="Play"
                             Margin="0 8 0 8"
                             Width="100"
-                            Click="{x:Bind ViewModel.Play}" />
+                            Click="{x:Bind ViewModel.Play}">
+                          <Interactivity:Interaction.Behaviors>
+                            <Behaviors:FocusOnLoadBehavior />
+                          </Interactivity:Interaction.Behaviors>
+                        </Button>
                     </StackPanel>
                     <TextBlock
                         Text="{x:Bind ViewModel.Overview, Mode=OneWay}"
