--- a/Jellyfin/Views/Login.xaml
+++ b/Jellyfin/Views/Login.xaml
@@ -3,6 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Jellyfin.Views"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:Behaviors="using:Jellyfin.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -38,7 +40,11 @@
                     Text="{x:Bind ViewModel.UserName, Mode=TwoWay}"
                     IsEnabled="{x:Bind ViewModel.IsInteractable, Mode=OneWay}"
                     Style="{StaticResource PrimaryTextBox}"
-                    Margin="0 0 0 20" />
+                    Margin="0 0 0 20">
+                    <Interactivity:Interaction.Behaviors>
+                        <Behaviors:FocusOnLoadBehavior />
+                    </Interactivity:Interaction.Behaviors>
+                </TextBox>
                 <PasswordBox
                     PlaceholderText="Password"
                     Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
