--- a/Jellyfin/Views/Movies.xaml
+++ b/Jellyfin/Views/Movies.xaml
@@ -3,6 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Jellyfin.Views"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:Behaviors="using:Jellyfin.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -24,6 +26,9 @@
         <Grid Grid.Row="1" Padding="0 40 0 0">
             <GridView
                 ItemsSource="{x:Bind ViewModel.Movies}">
+                <Interactivity:Interaction.Behaviors>
+                  <Behaviors:FocusFirstItemOnLoadBehavior />
+                </Interactivity:Interaction.Behaviors>
                 <GridView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <ItemsWrapGrid Orientation="Horizontal"/>
