--- a/Jellyfin/Views/Home.xaml
+++ b/Jellyfin/Views/Home.xaml
@@ -22,12 +22,6 @@
                 HorizontalAlignment="Left" 
                 Height="28"
                 Margin="28 0 0 0" />
-            <Button 
-                Style="{StaticResource PrimaryButton}"
-                Content="Log Out (testing)"
-                Margin="0 8 0 8"
-                HorizontalAlignment="Right"
-                Click="{x:Bind ViewModel.LogOut}" />
         </Grid>
         <Grid Grid.Row="1" Padding="0 40 0 0">
             <StackPanel 
@@ -68,6 +62,19 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                <!-- TODO: Move to drawer -->
+                <Button 
+                    Style="{StaticResource PrimaryButton}"
+                    Content="Select Server"
+                    Margin="0 8 0 8"
+                    HorizontalAlignment="Right"
+                    Click="{x:Bind ViewModel.SelectServer}" />
+                <Button 
+                    Style="{StaticResource PrimaryButton}"
+                    Content="Sign Out"
+                    Margin="0 8 0 8"
+                    HorizontalAlignment="Right"
+                    Click="{x:Bind ViewModel.SignOut}" />
             </StackPanel>
         </Grid>
     </Grid>
