--- a/Jellyfin/Views/Movies.xaml
+++ b/Jellyfin/Views/Movies.xaml
@@ -28,7 +28,7 @@
                 ItemsSource="{x:Bind ViewModel.Movies, Mode=OneWay}"
                 SelectionMode="None"
                 IsItemClickEnabled="True"
-                Behaviors:ListViewBaseCommandBehavior.Command="{x:Bind ViewModel.NavigateToViewCommand}">
+                Behaviors:ListViewBaseCommandBehavior.Command="{x:Bind ViewModel.NavigateToMovieCommand}">
                 <Interactivity:Interaction.Behaviors>
                   <Behaviors:FocusFirstItemOnLoadBehavior />
                 </Interactivity:Interaction.Behaviors>
